--- a/my-app/src/app/home-page/home-page.component.html
+++ b/my-app/src/app/home-page/home-page.component.html
@@ -11,7 +11,12 @@
       <img src="pk.jpg" alt="Prakriti Dwivedi" />
     </div>
     <div class="text-content">
-      <h1 class="name">Hi! I'm Prakriti Dwivedi<span class="logo-dot">.</span> 👋</h1>
+      <h1 class="name">
+  Hi! I'm Prakriti Dwivedi
+  <span class="logo-dot">.</span>
+  <img src="hello.gif" alt="Hello" class="wave-gif" />
+</h1>
+
       <h2 class="title">Fullstack Web Developer<br>from Gujarat.</h2>
       <div class="cta-buttons">
         <a href="#experience" class="cta-btn cta-primary" aria-label="My Experience" (click)="scrollToSection($event, '#experience')">
